parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    DIVIDE
    EQUALS
    LESSEQ
    LPAREN
    MINUS
    MOREEQ
    PLUS
    RPAREN
    THEN
    TIMES
    WHILE

Grammar

Rule 0     S' -> programa_start
Rule 1     programa_start -> PROGRAM ID ; programa_start_1 BLOQUE
Rule 2     programa_start_1 -> VARS
Rule 3     programa_start_1 -> empty
Rule 4     VARS -> VAR ID VARS_I : TIPO ; VARS_1
Rule 5     VARS_I -> ID VARS_I
Rule 6     VARS_I -> empty
Rule 7     VARS_1 -> ID VARS_I : TIPO ; VARS_1
Rule 8     VARS_1 -> empty
Rule 9     TIPO -> FLOAT
Rule 10    TIPO -> INT
Rule 11    BLOQUE -> { BLOQUE_1 }
Rule 12    BLOQUE_1 -> ESTATUTO BLOQUE_1
Rule 13    BLOQUE_1 -> empty
Rule 14    ESTATUTO -> ASIGNACION
Rule 15    ESTATUTO -> CONDICION
Rule 16    ESTATUTO -> ESCRITURA
Rule 17    ASIGNACION -> ID = EXPRESION
Rule 18    EXPRESION -> EXP EXPRESION_1
Rule 19    EXP -> TERMINO EXP_1
Rule 20    EXP_1 -> + EXP
Rule 21    EXP_1 -> - EXP
Rule 22    EXP_1 -> empty
Rule 23    EXPRESION_1 -> > EXPRESION
Rule 24    EXPRESION_1 -> < EXPRESION
Rule 25    EXPRESION_1 -> MORELESS EXPRESION
Rule 26    EXPRESION_1 -> empty
Rule 27    ESCRITURA -> PRINT ( ESCRITURA_1 ) ;
Rule 28    ESCRITURA_1 -> CTESTRING ESCRITURA_2
Rule 29    ESCRITURA_1 -> EXPRESION ESCRITURA_2
Rule 30    ESCRITURA_2 -> ESCRITURA_1
Rule 31    ESCRITURA_2 -> empty
Rule 32    CONDICION -> IF ( EXPRESION ) BLOQUE CONDICION_1 ;
Rule 33    CONDICION_1 -> ELSE BLOQUE
Rule 34    CONDICION_1 -> empty
Rule 35    TERMINO -> FACTOR TERMINO_1
Rule 36    TERMINO_1 -> * TERMINO
Rule 37    TERMINO_1 -> / TERMINO
Rule 38    TERMINO_1 -> empty
Rule 39    FACTOR -> ( EXPRESION ) FACTOR_1
Rule 40    FACTOR -> FACTOR_1 VAR_CTE
Rule 41    FACTOR_1 -> +
Rule 42    FACTOR_1 -> -
Rule 43    FACTOR_1 -> empty
Rule 44    VAR_CTE -> ID
Rule 45    VAR_CTE -> INT
Rule 46    VAR_CTE -> FLOAT
Rule 47    empty -> <empty>

Terminals, with rules where they appear

(                    : 27 32 39
)                    : 27 32 39
*                    : 36
+                    : 20 41
-                    : 21 42
/                    : 37
:                    : 4 7
;                    : 1 4 7 27 32
<                    : 24
=                    : 17
>                    : 23
COMMENT              : 
CTESTRING            : 28
DIVIDE               : 
ELSE                 : 33
EQUALS               : 
FLOAT                : 9 46
ID                   : 1 4 5 7 17 44
IF                   : 32
INT                  : 10 45
LESSEQ               : 
LPAREN               : 
MINUS                : 
MOREEQ               : 
MORELESS             : 25
PLUS                 : 
PRINT                : 27
PROGRAM              : 1
RPAREN               : 
THEN                 : 
TIMES                : 
VAR                  : 4
WHILE                : 
error                : 
{                    : 11
}                    : 11

Nonterminals, with rules where they appear

ASIGNACION           : 14
BLOQUE               : 1 32 33
BLOQUE_1             : 11 12
CONDICION            : 15
CONDICION_1          : 32
ESCRITURA            : 16
ESCRITURA_1          : 27 30
ESCRITURA_2          : 28 29
ESTATUTO             : 12
EXP                  : 18 20 21
EXPRESION            : 17 23 24 25 29 32 39
EXPRESION_1          : 18
EXP_1                : 19
FACTOR               : 35
FACTOR_1             : 39 40
TERMINO              : 19 36 37
TERMINO_1            : 35
TIPO                 : 4 7
VARS                 : 2
VARS_1               : 4 7
VARS_I               : 4 5 7
VAR_CTE              : 40
empty                : 3 6 8 13 22 26 31 34 38 43
programa_start       : 0
programa_start_1     : 1

Parsing method: LALR

state 0

    (0) S' -> . programa_start
    (1) programa_start -> . PROGRAM ID ; programa_start_1 BLOQUE

    PROGRAM         shift and go to state 2

    programa_start                 shift and go to state 1

state 1

    (0) S' -> programa_start .



state 2

    (1) programa_start -> PROGRAM . ID ; programa_start_1 BLOQUE

    ID              shift and go to state 3


state 3

    (1) programa_start -> PROGRAM ID . ; programa_start_1 BLOQUE

    ;               shift and go to state 4


state 4

    (1) programa_start -> PROGRAM ID ; . programa_start_1 BLOQUE
    (2) programa_start_1 -> . VARS
    (3) programa_start_1 -> . empty
    (4) VARS -> . VAR ID VARS_I : TIPO ; VARS_1
    (47) empty -> .

    VAR             shift and go to state 8
    {               reduce using rule 47 (empty -> .)

    programa_start_1               shift and go to state 5
    VARS                           shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) programa_start -> PROGRAM ID ; programa_start_1 . BLOQUE
    (11) BLOQUE -> . { BLOQUE_1 }

    {               shift and go to state 10

    BLOQUE                         shift and go to state 9

state 6

    (2) programa_start_1 -> VARS .

    {               reduce using rule 2 (programa_start_1 -> VARS .)


state 7

    (3) programa_start_1 -> empty .

    {               reduce using rule 3 (programa_start_1 -> empty .)


state 8

    (4) VARS -> VAR . ID VARS_I : TIPO ; VARS_1

    ID              shift and go to state 11


state 9

    (1) programa_start -> PROGRAM ID ; programa_start_1 BLOQUE .

    $end            reduce using rule 1 (programa_start -> PROGRAM ID ; programa_start_1 BLOQUE .)


state 10

    (11) BLOQUE -> { . BLOQUE_1 }
    (12) BLOQUE_1 -> . ESTATUTO BLOQUE_1
    (13) BLOQUE_1 -> . empty
    (14) ESTATUTO -> . ASIGNACION
    (15) ESTATUTO -> . CONDICION
    (16) ESTATUTO -> . ESCRITURA
    (47) empty -> .
    (17) ASIGNACION -> . ID = EXPRESION
    (32) CONDICION -> . IF ( EXPRESION ) BLOQUE CONDICION_1 ;
    (27) ESCRITURA -> . PRINT ( ESCRITURA_1 ) ;

    }               reduce using rule 47 (empty -> .)
    ID              shift and go to state 18
    IF              shift and go to state 19
    PRINT           shift and go to state 20

    BLOQUE_1                       shift and go to state 12
    ESTATUTO                       shift and go to state 13
    empty                          shift and go to state 14
    ASIGNACION                     shift and go to state 15
    CONDICION                      shift and go to state 16
    ESCRITURA                      shift and go to state 17

state 11

    (4) VARS -> VAR ID . VARS_I : TIPO ; VARS_1
    (5) VARS_I -> . ID VARS_I
    (6) VARS_I -> . empty
    (47) empty -> .

    ID              shift and go to state 21
    :               reduce using rule 47 (empty -> .)

    VARS_I                         shift and go to state 22
    empty                          shift and go to state 23

state 12

    (11) BLOQUE -> { BLOQUE_1 . }

    }               shift and go to state 24


state 13

    (12) BLOQUE_1 -> ESTATUTO . BLOQUE_1
    (12) BLOQUE_1 -> . ESTATUTO BLOQUE_1
    (13) BLOQUE_1 -> . empty
    (14) ESTATUTO -> . ASIGNACION
    (15) ESTATUTO -> . CONDICION
    (16) ESTATUTO -> . ESCRITURA
    (47) empty -> .
    (17) ASIGNACION -> . ID = EXPRESION
    (32) CONDICION -> . IF ( EXPRESION ) BLOQUE CONDICION_1 ;
    (27) ESCRITURA -> . PRINT ( ESCRITURA_1 ) ;

    }               reduce using rule 47 (empty -> .)
    ID              shift and go to state 18
    IF              shift and go to state 19
    PRINT           shift and go to state 20

    ESTATUTO                       shift and go to state 13
    BLOQUE_1                       shift and go to state 25
    empty                          shift and go to state 14
    ASIGNACION                     shift and go to state 15
    CONDICION                      shift and go to state 16
    ESCRITURA                      shift and go to state 17

state 14

    (13) BLOQUE_1 -> empty .

    }               reduce using rule 13 (BLOQUE_1 -> empty .)


state 15

    (14) ESTATUTO -> ASIGNACION .

    ID              reduce using rule 14 (ESTATUTO -> ASIGNACION .)
    IF              reduce using rule 14 (ESTATUTO -> ASIGNACION .)
    PRINT           reduce using rule 14 (ESTATUTO -> ASIGNACION .)
    }               reduce using rule 14 (ESTATUTO -> ASIGNACION .)


state 16

    (15) ESTATUTO -> CONDICION .

    ID              reduce using rule 15 (ESTATUTO -> CONDICION .)
    IF              reduce using rule 15 (ESTATUTO -> CONDICION .)
    PRINT           reduce using rule 15 (ESTATUTO -> CONDICION .)
    }               reduce using rule 15 (ESTATUTO -> CONDICION .)


state 17

    (16) ESTATUTO -> ESCRITURA .

    ID              reduce using rule 16 (ESTATUTO -> ESCRITURA .)
    IF              reduce using rule 16 (ESTATUTO -> ESCRITURA .)
    PRINT           reduce using rule 16 (ESTATUTO -> ESCRITURA .)
    }               reduce using rule 16 (ESTATUTO -> ESCRITURA .)


state 18

    (17) ASIGNACION -> ID . = EXPRESION

    =               shift and go to state 26


state 19

    (32) CONDICION -> IF . ( EXPRESION ) BLOQUE CONDICION_1 ;

    (               shift and go to state 27


state 20

    (27) ESCRITURA -> PRINT . ( ESCRITURA_1 ) ;

    (               shift and go to state 28


state 21

    (5) VARS_I -> ID . VARS_I
    (5) VARS_I -> . ID VARS_I
    (6) VARS_I -> . empty
    (47) empty -> .

    ID              shift and go to state 21
    :               reduce using rule 47 (empty -> .)

    VARS_I                         shift and go to state 29
    empty                          shift and go to state 23

state 22

    (4) VARS -> VAR ID VARS_I . : TIPO ; VARS_1

    :               shift and go to state 30


state 23

    (6) VARS_I -> empty .

    :               reduce using rule 6 (VARS_I -> empty .)


state 24

    (11) BLOQUE -> { BLOQUE_1 } .

    $end            reduce using rule 11 (BLOQUE -> { BLOQUE_1 } .)
    ELSE            reduce using rule 11 (BLOQUE -> { BLOQUE_1 } .)
    ;               reduce using rule 11 (BLOQUE -> { BLOQUE_1 } .)


state 25

    (12) BLOQUE_1 -> ESTATUTO BLOQUE_1 .

    }               reduce using rule 12 (BLOQUE_1 -> ESTATUTO BLOQUE_1 .)


state 26

    (17) ASIGNACION -> ID = . EXPRESION
    (18) EXPRESION -> . EXP EXPRESION_1
    (19) EXP -> . TERMINO EXP_1
    (35) TERMINO -> . FACTOR TERMINO_1
    (39) FACTOR -> . ( EXPRESION ) FACTOR_1
    (40) FACTOR -> . FACTOR_1 VAR_CTE
    (41) FACTOR_1 -> . +
    (42) FACTOR_1 -> . -
    (43) FACTOR_1 -> . empty
    (47) empty -> .

    (               shift and go to state 35
    +               shift and go to state 37
    -               shift and go to state 38
    ID              reduce using rule 47 (empty -> .)
    INT             reduce using rule 47 (empty -> .)
    FLOAT           reduce using rule 47 (empty -> .)

    EXPRESION                      shift and go to state 31
    EXP                            shift and go to state 32
    TERMINO                        shift and go to state 33
    FACTOR                         shift and go to state 34
    FACTOR_1                       shift and go to state 36
    empty                          shift and go to state 39

state 27

    (32) CONDICION -> IF ( . EXPRESION ) BLOQUE CONDICION_1 ;
    (18) EXPRESION -> . EXP EXPRESION_1
    (19) EXP -> . TERMINO EXP_1
    (35) TERMINO -> . FACTOR TERMINO_1
    (39) FACTOR -> . ( EXPRESION ) FACTOR_1
    (40) FACTOR -> . FACTOR_1 VAR_CTE
    (41) FACTOR_1 -> . +
    (42) FACTOR_1 -> . -
    (43) FACTOR_1 -> . empty
    (47) empty -> .

    (               shift and go to state 35
    +               shift and go to state 37
    -               shift and go to state 38
    ID              reduce using rule 47 (empty -> .)
    INT             reduce using rule 47 (empty -> .)
    FLOAT           reduce using rule 47 (empty -> .)

    EXPRESION                      shift and go to state 40
    EXP                            shift and go to state 32
    TERMINO                        shift and go to state 33
    FACTOR                         shift and go to state 34
    FACTOR_1                       shift and go to state 36
    empty                          shift and go to state 39

state 28

    (27) ESCRITURA -> PRINT ( . ESCRITURA_1 ) ;
    (28) ESCRITURA_1 -> . CTESTRING ESCRITURA_2
    (29) ESCRITURA_1 -> . EXPRESION ESCRITURA_2
    (18) EXPRESION -> . EXP EXPRESION_1
    (19) EXP -> . TERMINO EXP_1
    (35) TERMINO -> . FACTOR TERMINO_1
    (39) FACTOR -> . ( EXPRESION ) FACTOR_1
    (40) FACTOR -> . FACTOR_1 VAR_CTE
    (41) FACTOR_1 -> . +
    (42) FACTOR_1 -> . -
    (43) FACTOR_1 -> . empty
    (47) empty -> .

    CTESTRING       shift and go to state 42
    (               shift and go to state 35
    +               shift and go to state 37
    -               shift and go to state 38
    ID              reduce using rule 47 (empty -> .)
    INT             reduce using rule 47 (empty -> .)
    FLOAT           reduce using rule 47 (empty -> .)

    ESCRITURA_1                    shift and go to state 41
    EXPRESION                      shift and go to state 43
    EXP                            shift and go to state 32
    TERMINO                        shift and go to state 33
    FACTOR                         shift and go to state 34
    FACTOR_1                       shift and go to state 36
    empty                          shift and go to state 39

state 29

    (5) VARS_I -> ID VARS_I .

    :               reduce using rule 5 (VARS_I -> ID VARS_I .)


state 30

    (4) VARS -> VAR ID VARS_I : . TIPO ; VARS_1
    (9) TIPO -> . FLOAT
    (10) TIPO -> . INT

    FLOAT           shift and go to state 45
    INT             shift and go to state 46

    TIPO                           shift and go to state 44

state 31

    (17) ASIGNACION -> ID = EXPRESION .

    ID              reduce using rule 17 (ASIGNACION -> ID = EXPRESION .)
    IF              reduce using rule 17 (ASIGNACION -> ID = EXPRESION .)
    PRINT           reduce using rule 17 (ASIGNACION -> ID = EXPRESION .)
    }               reduce using rule 17 (ASIGNACION -> ID = EXPRESION .)


state 32

    (18) EXPRESION -> EXP . EXPRESION_1
    (23) EXPRESION_1 -> . > EXPRESION
    (24) EXPRESION_1 -> . < EXPRESION
    (25) EXPRESION_1 -> . MORELESS EXPRESION
    (26) EXPRESION_1 -> . empty
    (47) empty -> .

    >               shift and go to state 48
    <               shift and go to state 49
    MORELESS        shift and go to state 50
    ID              reduce using rule 47 (empty -> .)
    IF              reduce using rule 47 (empty -> .)
    PRINT           reduce using rule 47 (empty -> .)
    }               reduce using rule 47 (empty -> .)
    )               reduce using rule 47 (empty -> .)
    CTESTRING       reduce using rule 47 (empty -> .)
    (               reduce using rule 47 (empty -> .)
    +               reduce using rule 47 (empty -> .)
    -               reduce using rule 47 (empty -> .)
    INT             reduce using rule 47 (empty -> .)
    FLOAT           reduce using rule 47 (empty -> .)

    EXPRESION_1                    shift and go to state 47
    empty                          shift and go to state 51

state 33

    (19) EXP -> TERMINO . EXP_1
    (20) EXP_1 -> . + EXP
    (21) EXP_1 -> . - EXP
    (22) EXP_1 -> . empty
    (47) empty -> .

  ! shift/reduce conflict for + resolved as shift
  ! shift/reduce conflict for - resolved as shift
    +               shift and go to state 53
    -               shift and go to state 54
    >               reduce using rule 47 (empty -> .)
    <               reduce using rule 47 (empty -> .)
    MORELESS        reduce using rule 47 (empty -> .)
    ID              reduce using rule 47 (empty -> .)
    IF              reduce using rule 47 (empty -> .)
    PRINT           reduce using rule 47 (empty -> .)
    }               reduce using rule 47 (empty -> .)
    )               reduce using rule 47 (empty -> .)
    CTESTRING       reduce using rule 47 (empty -> .)
    (               reduce using rule 47 (empty -> .)
    INT             reduce using rule 47 (empty -> .)
    FLOAT           reduce using rule 47 (empty -> .)

  ! +               [ reduce using rule 47 (empty -> .) ]
  ! -               [ reduce using rule 47 (empty -> .) ]

    EXP_1                          shift and go to state 52
    empty                          shift and go to state 55

state 34

    (35) TERMINO -> FACTOR . TERMINO_1
    (36) TERMINO_1 -> . * TERMINO
    (37) TERMINO_1 -> . / TERMINO
    (38) TERMINO_1 -> . empty
    (47) empty -> .

    *               shift and go to state 57
    /               shift and go to state 58
    +               reduce using rule 47 (empty -> .)
    -               reduce using rule 47 (empty -> .)
    >               reduce using rule 47 (empty -> .)
    <               reduce using rule 47 (empty -> .)
    MORELESS        reduce using rule 47 (empty -> .)
    ID              reduce using rule 47 (empty -> .)
    IF              reduce using rule 47 (empty -> .)
    PRINT           reduce using rule 47 (empty -> .)
    }               reduce using rule 47 (empty -> .)
    )               reduce using rule 47 (empty -> .)
    CTESTRING       reduce using rule 47 (empty -> .)
    (               reduce using rule 47 (empty -> .)
    INT             reduce using rule 47 (empty -> .)
    FLOAT           reduce using rule 47 (empty -> .)

    TERMINO_1                      shift and go to state 56
    empty                          shift and go to state 59

state 35

    (39) FACTOR -> ( . EXPRESION ) FACTOR_1
    (18) EXPRESION -> . EXP EXPRESION_1
    (19) EXP -> . TERMINO EXP_1
    (35) TERMINO -> . FACTOR TERMINO_1
    (39) FACTOR -> . ( EXPRESION ) FACTOR_1
    (40) FACTOR -> . FACTOR_1 VAR_CTE
    (41) FACTOR_1 -> . +
    (42) FACTOR_1 -> . -
    (43) FACTOR_1 -> . empty
    (47) empty -> .

    (               shift and go to state 35
    +               shift and go to state 37
    -               shift and go to state 38
    ID              reduce using rule 47 (empty -> .)
    INT             reduce using rule 47 (empty -> .)
    FLOAT           reduce using rule 47 (empty -> .)

    EXPRESION                      shift and go to state 60
    FACTOR_1                       shift and go to state 36
    EXP                            shift and go to state 32
    TERMINO                        shift and go to state 33
    FACTOR                         shift and go to state 34
    empty                          shift and go to state 39

state 36

    (40) FACTOR -> FACTOR_1 . VAR_CTE
    (44) VAR_CTE -> . ID
    (45) VAR_CTE -> . INT
    (46) VAR_CTE -> . FLOAT

    ID              shift and go to state 62
    INT             shift and go to state 63
    FLOAT           shift and go to state 64

    VAR_CTE                        shift and go to state 61

state 37

    (41) FACTOR_1 -> + .

    ID              reduce using rule 41 (FACTOR_1 -> + .)
    INT             reduce using rule 41 (FACTOR_1 -> + .)
    FLOAT           reduce using rule 41 (FACTOR_1 -> + .)
    *               reduce using rule 41 (FACTOR_1 -> + .)
    /               reduce using rule 41 (FACTOR_1 -> + .)
    +               reduce using rule 41 (FACTOR_1 -> + .)
    -               reduce using rule 41 (FACTOR_1 -> + .)
    >               reduce using rule 41 (FACTOR_1 -> + .)
    <               reduce using rule 41 (FACTOR_1 -> + .)
    MORELESS        reduce using rule 41 (FACTOR_1 -> + .)
    IF              reduce using rule 41 (FACTOR_1 -> + .)
    PRINT           reduce using rule 41 (FACTOR_1 -> + .)
    }               reduce using rule 41 (FACTOR_1 -> + .)
    )               reduce using rule 41 (FACTOR_1 -> + .)
    CTESTRING       reduce using rule 41 (FACTOR_1 -> + .)
    (               reduce using rule 41 (FACTOR_1 -> + .)


state 38

    (42) FACTOR_1 -> - .

    ID              reduce using rule 42 (FACTOR_1 -> - .)
    INT             reduce using rule 42 (FACTOR_1 -> - .)
    FLOAT           reduce using rule 42 (FACTOR_1 -> - .)
    *               reduce using rule 42 (FACTOR_1 -> - .)
    /               reduce using rule 42 (FACTOR_1 -> - .)
    +               reduce using rule 42 (FACTOR_1 -> - .)
    -               reduce using rule 42 (FACTOR_1 -> - .)
    >               reduce using rule 42 (FACTOR_1 -> - .)
    <               reduce using rule 42 (FACTOR_1 -> - .)
    MORELESS        reduce using rule 42 (FACTOR_1 -> - .)
    IF              reduce using rule 42 (FACTOR_1 -> - .)
    PRINT           reduce using rule 42 (FACTOR_1 -> - .)
    }               reduce using rule 42 (FACTOR_1 -> - .)
    )               reduce using rule 42 (FACTOR_1 -> - .)
    CTESTRING       reduce using rule 42 (FACTOR_1 -> - .)
    (               reduce using rule 42 (FACTOR_1 -> - .)


state 39

    (43) FACTOR_1 -> empty .

    ID              reduce using rule 43 (FACTOR_1 -> empty .)
    INT             reduce using rule 43 (FACTOR_1 -> empty .)
    FLOAT           reduce using rule 43 (FACTOR_1 -> empty .)
    *               reduce using rule 43 (FACTOR_1 -> empty .)
    /               reduce using rule 43 (FACTOR_1 -> empty .)
    +               reduce using rule 43 (FACTOR_1 -> empty .)
    -               reduce using rule 43 (FACTOR_1 -> empty .)
    >               reduce using rule 43 (FACTOR_1 -> empty .)
    <               reduce using rule 43 (FACTOR_1 -> empty .)
    MORELESS        reduce using rule 43 (FACTOR_1 -> empty .)
    IF              reduce using rule 43 (FACTOR_1 -> empty .)
    PRINT           reduce using rule 43 (FACTOR_1 -> empty .)
    }               reduce using rule 43 (FACTOR_1 -> empty .)
    )               reduce using rule 43 (FACTOR_1 -> empty .)
    CTESTRING       reduce using rule 43 (FACTOR_1 -> empty .)
    (               reduce using rule 43 (FACTOR_1 -> empty .)


state 40

    (32) CONDICION -> IF ( EXPRESION . ) BLOQUE CONDICION_1 ;

    )               shift and go to state 65


state 41

    (27) ESCRITURA -> PRINT ( ESCRITURA_1 . ) ;

    )               shift and go to state 66


state 42

    (28) ESCRITURA_1 -> CTESTRING . ESCRITURA_2
    (30) ESCRITURA_2 -> . ESCRITURA_1
    (31) ESCRITURA_2 -> . empty
    (28) ESCRITURA_1 -> . CTESTRING ESCRITURA_2
    (29) ESCRITURA_1 -> . EXPRESION ESCRITURA_2
    (47) empty -> .
    (18) EXPRESION -> . EXP EXPRESION_1
    (19) EXP -> . TERMINO EXP_1
    (35) TERMINO -> . FACTOR TERMINO_1
    (39) FACTOR -> . ( EXPRESION ) FACTOR_1
    (40) FACTOR -> . FACTOR_1 VAR_CTE
    (41) FACTOR_1 -> . +
    (42) FACTOR_1 -> . -
    (43) FACTOR_1 -> . empty

    CTESTRING       shift and go to state 42
    )               reduce using rule 47 (empty -> .)
    ID              reduce using rule 47 (empty -> .)
    INT             reduce using rule 47 (empty -> .)
    FLOAT           reduce using rule 47 (empty -> .)
    (               shift and go to state 35
    +               shift and go to state 37
    -               shift and go to state 38

    ESCRITURA_2                    shift and go to state 67
    ESCRITURA_1                    shift and go to state 68
    empty                          shift and go to state 69
    EXPRESION                      shift and go to state 43
    EXP                            shift and go to state 32
    TERMINO                        shift and go to state 33
    FACTOR                         shift and go to state 34
    FACTOR_1                       shift and go to state 36

state 43

    (29) ESCRITURA_1 -> EXPRESION . ESCRITURA_2
    (30) ESCRITURA_2 -> . ESCRITURA_1
    (31) ESCRITURA_2 -> . empty
    (28) ESCRITURA_1 -> . CTESTRING ESCRITURA_2
    (29) ESCRITURA_1 -> . EXPRESION ESCRITURA_2
    (47) empty -> .
    (18) EXPRESION -> . EXP EXPRESION_1
    (19) EXP -> . TERMINO EXP_1
    (35) TERMINO -> . FACTOR TERMINO_1
    (39) FACTOR -> . ( EXPRESION ) FACTOR_1
    (40) FACTOR -> . FACTOR_1 VAR_CTE
    (41) FACTOR_1 -> . +
    (42) FACTOR_1 -> . -
    (43) FACTOR_1 -> . empty

    CTESTRING       shift and go to state 42
    )               reduce using rule 47 (empty -> .)
    ID              reduce using rule 47 (empty -> .)
    INT             reduce using rule 47 (empty -> .)
    FLOAT           reduce using rule 47 (empty -> .)
    (               shift and go to state 35
    +               shift and go to state 37
    -               shift and go to state 38

    EXPRESION                      shift and go to state 43
    ESCRITURA_2                    shift and go to state 70
    ESCRITURA_1                    shift and go to state 68
    empty                          shift and go to state 69
    EXP                            shift and go to state 32
    TERMINO                        shift and go to state 33
    FACTOR                         shift and go to state 34
    FACTOR_1                       shift and go to state 36

state 44

    (4) VARS -> VAR ID VARS_I : TIPO . ; VARS_1

    ;               shift and go to state 71


state 45

    (9) TIPO -> FLOAT .

    ;               reduce using rule 9 (TIPO -> FLOAT .)


state 46

    (10) TIPO -> INT .

    ;               reduce using rule 10 (TIPO -> INT .)


state 47

    (18) EXPRESION -> EXP EXPRESION_1 .

    ID              reduce using rule 18 (EXPRESION -> EXP EXPRESION_1 .)
    IF              reduce using rule 18 (EXPRESION -> EXP EXPRESION_1 .)
    PRINT           reduce using rule 18 (EXPRESION -> EXP EXPRESION_1 .)
    }               reduce using rule 18 (EXPRESION -> EXP EXPRESION_1 .)
    )               reduce using rule 18 (EXPRESION -> EXP EXPRESION_1 .)
    CTESTRING       reduce using rule 18 (EXPRESION -> EXP EXPRESION_1 .)
    (               reduce using rule 18 (EXPRESION -> EXP EXPRESION_1 .)
    +               reduce using rule 18 (EXPRESION -> EXP EXPRESION_1 .)
    -               reduce using rule 18 (EXPRESION -> EXP EXPRESION_1 .)
    INT             reduce using rule 18 (EXPRESION -> EXP EXPRESION_1 .)
    FLOAT           reduce using rule 18 (EXPRESION -> EXP EXPRESION_1 .)


state 48

    (23) EXPRESION_1 -> > . EXPRESION
    (18) EXPRESION -> . EXP EXPRESION_1
    (19) EXP -> . TERMINO EXP_1
    (35) TERMINO -> . FACTOR TERMINO_1
    (39) FACTOR -> . ( EXPRESION ) FACTOR_1
    (40) FACTOR -> . FACTOR_1 VAR_CTE
    (41) FACTOR_1 -> . +
    (42) FACTOR_1 -> . -
    (43) FACTOR_1 -> . empty
    (47) empty -> .

    (               shift and go to state 35
    +               shift and go to state 37
    -               shift and go to state 38
    ID              reduce using rule 47 (empty -> .)
    INT             reduce using rule 47 (empty -> .)
    FLOAT           reduce using rule 47 (empty -> .)

    EXPRESION                      shift and go to state 72
    EXP                            shift and go to state 32
    TERMINO                        shift and go to state 33
    FACTOR                         shift and go to state 34
    FACTOR_1                       shift and go to state 36
    empty                          shift and go to state 39

state 49

    (24) EXPRESION_1 -> < . EXPRESION
    (18) EXPRESION -> . EXP EXPRESION_1
    (19) EXP -> . TERMINO EXP_1
    (35) TERMINO -> . FACTOR TERMINO_1
    (39) FACTOR -> . ( EXPRESION ) FACTOR_1
    (40) FACTOR -> . FACTOR_1 VAR_CTE
    (41) FACTOR_1 -> . +
    (42) FACTOR_1 -> . -
    (43) FACTOR_1 -> . empty
    (47) empty -> .

    (               shift and go to state 35
    +               shift and go to state 37
    -               shift and go to state 38
    ID              reduce using rule 47 (empty -> .)
    INT             reduce using rule 47 (empty -> .)
    FLOAT           reduce using rule 47 (empty -> .)

    EXPRESION                      shift and go to state 73
    EXP                            shift and go to state 32
    TERMINO                        shift and go to state 33
    FACTOR                         shift and go to state 34
    FACTOR_1                       shift and go to state 36
    empty                          shift and go to state 39

state 50

    (25) EXPRESION_1 -> MORELESS . EXPRESION
    (18) EXPRESION -> . EXP EXPRESION_1
    (19) EXP -> . TERMINO EXP_1
    (35) TERMINO -> . FACTOR TERMINO_1
    (39) FACTOR -> . ( EXPRESION ) FACTOR_1
    (40) FACTOR -> . FACTOR_1 VAR_CTE
    (41) FACTOR_1 -> . +
    (42) FACTOR_1 -> . -
    (43) FACTOR_1 -> . empty
    (47) empty -> .

    (               shift and go to state 35
    +               shift and go to state 37
    -               shift and go to state 38
    ID              reduce using rule 47 (empty -> .)
    INT             reduce using rule 47 (empty -> .)
    FLOAT           reduce using rule 47 (empty -> .)

    EXPRESION                      shift and go to state 74
    EXP                            shift and go to state 32
    TERMINO                        shift and go to state 33
    FACTOR                         shift and go to state 34
    FACTOR_1                       shift and go to state 36
    empty                          shift and go to state 39

state 51

    (26) EXPRESION_1 -> empty .

    ID              reduce using rule 26 (EXPRESION_1 -> empty .)
    IF              reduce using rule 26 (EXPRESION_1 -> empty .)
    PRINT           reduce using rule 26 (EXPRESION_1 -> empty .)
    }               reduce using rule 26 (EXPRESION_1 -> empty .)
    )               reduce using rule 26 (EXPRESION_1 -> empty .)
    CTESTRING       reduce using rule 26 (EXPRESION_1 -> empty .)
    (               reduce using rule 26 (EXPRESION_1 -> empty .)
    +               reduce using rule 26 (EXPRESION_1 -> empty .)
    -               reduce using rule 26 (EXPRESION_1 -> empty .)
    INT             reduce using rule 26 (EXPRESION_1 -> empty .)
    FLOAT           reduce using rule 26 (EXPRESION_1 -> empty .)


state 52

    (19) EXP -> TERMINO EXP_1 .

    >               reduce using rule 19 (EXP -> TERMINO EXP_1 .)
    <               reduce using rule 19 (EXP -> TERMINO EXP_1 .)
    MORELESS        reduce using rule 19 (EXP -> TERMINO EXP_1 .)
    ID              reduce using rule 19 (EXP -> TERMINO EXP_1 .)
    IF              reduce using rule 19 (EXP -> TERMINO EXP_1 .)
    PRINT           reduce using rule 19 (EXP -> TERMINO EXP_1 .)
    }               reduce using rule 19 (EXP -> TERMINO EXP_1 .)
    )               reduce using rule 19 (EXP -> TERMINO EXP_1 .)
    CTESTRING       reduce using rule 19 (EXP -> TERMINO EXP_1 .)
    (               reduce using rule 19 (EXP -> TERMINO EXP_1 .)
    +               reduce using rule 19 (EXP -> TERMINO EXP_1 .)
    -               reduce using rule 19 (EXP -> TERMINO EXP_1 .)
    INT             reduce using rule 19 (EXP -> TERMINO EXP_1 .)
    FLOAT           reduce using rule 19 (EXP -> TERMINO EXP_1 .)


state 53

    (20) EXP_1 -> + . EXP
    (19) EXP -> . TERMINO EXP_1
    (35) TERMINO -> . FACTOR TERMINO_1
    (39) FACTOR -> . ( EXPRESION ) FACTOR_1
    (40) FACTOR -> . FACTOR_1 VAR_CTE
    (41) FACTOR_1 -> . +
    (42) FACTOR_1 -> . -
    (43) FACTOR_1 -> . empty
    (47) empty -> .

    (               shift and go to state 35
    +               shift and go to state 37
    -               shift and go to state 38
    ID              reduce using rule 47 (empty -> .)
    INT             reduce using rule 47 (empty -> .)
    FLOAT           reduce using rule 47 (empty -> .)

    EXP                            shift and go to state 75
    TERMINO                        shift and go to state 33
    FACTOR                         shift and go to state 34
    FACTOR_1                       shift and go to state 36
    empty                          shift and go to state 39

state 54
